// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme <BasicComponent /> 1`] = `
<div
  class="react-tabs"
  data-tabs="true"
>
  <ul
    class="react-tabs__tab-list"
    role="tablist"
  >
    <li
      aria-controls="react-tabs-1"
      aria-disabled="false"
      aria-selected="true"
      class="react-tabs__tab react-tabs__tab--selected"
      id="react-tabs-0"
      role="tab"
      tabindex="0"
    >
      Title 1
    </li>
    <li
      aria-controls="react-tabs-3"
      aria-disabled="false"
      aria-selected="false"
      class="react-tabs__tab"
      id="react-tabs-2"
      role="tab"
    >
      Title 2
    </li>
  </ul>
  <div
    aria-labelledby="react-tabs-0"
    class="react-tabs__tab-panel react-tabs__tab-panel--selected"
    id="react-tabs-1"
    role="tabpanel"
  >
    <h2>
      Any content 1
    </h2>
  </div>
  <div
    aria-labelledby="react-tabs-2"
    class="react-tabs__tab-panel"
    id="react-tabs-3"
    role="tabpanel"
  />
</div>
`;

exports[`enzyme <ControlledComponent /> 1`] = `
<div
  class="react-tabs"
  data-tabs="true"
>
  <ul
    class="react-tabs__tab-list"
    role="tablist"
  >
    <li
      aria-controls="react-tabs-5"
      aria-disabled="false"
      aria-selected="true"
      class="react-tabs__tab react-tabs__tab--selected"
      id="react-tabs-4"
      role="tab"
      tabindex="0"
    >
      Title 1
    </li>
    <li
      aria-controls="react-tabs-7"
      aria-disabled="false"
      aria-selected="false"
      class="react-tabs__tab"
      id="react-tabs-6"
      role="tab"
    >
      Title 2
    </li>
  </ul>
  <div
    aria-labelledby="react-tabs-4"
    class="react-tabs__tab-panel react-tabs__tab-panel--selected"
    id="react-tabs-5"
    role="tabpanel"
  />
  <div
    aria-labelledby="react-tabs-6"
    class="react-tabs__tab-panel"
    id="react-tabs-7"
    role="tabpanel"
  />
</div>
`;

exports[`enzyme <ControlledComponent /> 2`] = `
<div
  class="react-tabs"
  data-tabs="true"
>
  <ul
    class="react-tabs__tab-list"
    role="tablist"
  >
    <li
      aria-controls="react-tabs-5"
      aria-disabled="false"
      aria-selected="true"
      class="react-tabs__tab react-tabs__tab--selected"
      id="react-tabs-4"
      role="tab"
      tabindex="0"
    >
      Title 1
    </li>
    <li
      aria-controls="react-tabs-7"
      aria-disabled="false"
      aria-selected="false"
      class="react-tabs__tab"
      id="react-tabs-6"
      role="tab"
    >
      Title 2
    </li>
  </ul>
  <div
    aria-labelledby="react-tabs-4"
    class="react-tabs__tab-panel react-tabs__tab-panel--selected"
    id="react-tabs-5"
    role="tabpanel"
  />
  <div
    aria-labelledby="react-tabs-6"
    class="react-tabs__tab-panel"
    id="react-tabs-7"
    role="tabpanel"
  />
</div>
`;

exports[`enzyme <ControlledComponent /> 3`] = `
<div
  class="react-tabs"
  data-tabs="true"
>
  <ul
    class="react-tabs__tab-list"
    role="tablist"
  >
    <li
      aria-controls="react-tabs-5"
      aria-disabled="false"
      aria-selected="false"
      class="react-tabs__tab"
      id="react-tabs-4"
      role="tab"
    >
      Title 1
    </li>
    <li
      aria-controls="react-tabs-7"
      aria-disabled="false"
      aria-selected="true"
      class="react-tabs__tab react-tabs__tab--selected"
      id="react-tabs-6"
      role="tab"
      tabindex="0"
    >
      Title 2
    </li>
  </ul>
  <div
    aria-labelledby="react-tabs-4"
    class="react-tabs__tab-panel"
    id="react-tabs-5"
    role="tabpanel"
  />
  <div
    aria-labelledby="react-tabs-6"
    class="react-tabs__tab-panel react-tabs__tab-panel--selected"
    id="react-tabs-7"
    role="tabpanel"
  />
</div>
`;

exports[`enzyme <CustomTabComponent /> 1`] = `
<div
  class="react-tabs"
  data-tabs="true"
>
  <ul
    class="react-tabs__tab-list"
    role="tablist"
  >
    <li
      aria-disabled="false"
      aria-selected="false"
      class="react-tabs__tab"
      role="tab"
    >
      <h1>
        Custom Tab 1
      </h1>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="react-tabs__tab"
      role="tab"
    >
      <h1>
        Custom Tab 2
      </h1>
    </li>
  </ul>
  <div
    aria-labelledby="react-tabs-8"
    class="react-tabs__tab-panel react-tabs__tab-panel--selected"
    id="react-tabs-9"
    role="tabpanel"
  >
    Panel 1
  </div>
  <div
    aria-labelledby="react-tabs-10"
    class="react-tabs__tab-panel"
    id="react-tabs-11"
    role="tabpanel"
  />
</div>
`;

exports[`enzyme <CustomTabComponent /> 2`] = `
<div
  class="react-tabs"
  data-tabs="true"
>
  <ul
    class="react-tabs__tab-list"
    role="tablist"
  >
    <li
      aria-disabled="false"
      aria-selected="false"
      class="react-tabs__tab"
      role="tab"
    >
      <h1>
        Custom Tab 1
      </h1>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="react-tabs__tab"
      role="tab"
    >
      <h1>
        Custom Tab 2
      </h1>
    </li>
  </ul>
  <div
    aria-labelledby="react-tabs-8"
    class="react-tabs__tab-panel react-tabs__tab-panel--selected"
    id="react-tabs-9"
    role="tabpanel"
  >
    Panel 1
  </div>
  <div
    aria-labelledby="react-tabs-10"
    class="react-tabs__tab-panel"
    id="react-tabs-11"
    role="tabpanel"
  />
</div>
`;

exports[`enzyme <CustomTabComponent /> 3`] = `
<div
  class="react-tabs"
  data-tabs="true"
>
  <ul
    class="react-tabs__tab-list"
    role="tablist"
  >
    <li
      aria-disabled="false"
      aria-selected="false"
      class="react-tabs__tab"
      role="tab"
    >
      <h1>
        Custom Tab 1
      </h1>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="react-tabs__tab"
      role="tab"
    >
      <h1>
        Custom Tab 2
      </h1>
    </li>
  </ul>
  <div
    aria-labelledby="react-tabs-8"
    class="react-tabs__tab-panel"
    id="react-tabs-9"
    role="tabpanel"
  />
  <div
    aria-labelledby="react-tabs-10"
    class="react-tabs__tab-panel react-tabs__tab-panel--selected"
    id="react-tabs-11"
    role="tabpanel"
  >
    Panel 2
  </div>
</div>
`;
